solucionando errores de la app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <thead>
           <tr>
             <th scope="col">id</th>
-            <th scope="col">Noimbre</th>
+            <th scope="col">Nombre</th>
             <th scope="col">Telefono</th>
             <th scope="col">Direciion</th>
             <th scope="col">Correo</th>
